@startuml

title __COURSEMKV's Class Diagram__\n


      class com.example.coursemkv.HelloApplication {
      }

      namespace controls {
        class com.example.coursemkv.controls.AdminControl {
        }
      }

      namespace controls {
        class com.example.coursemkv.controls.HelloController {
        }
      }

      namespace controls {
        class com.example.coursemkv.controls.SignUpController {
        }
      }

      namespace controls {
        class com.example.coursemkv.controls.UserControl {
        }
      }

      namespace model {
        class com.example.coursemkv.model.Admin {
        }
      }

      namespace model {
        interface com.example.coursemkv.model.DAO {
        }
      }

      namespace model {
        class com.example.coursemkv.model.JDBCPostgreSQL {
        }
      }

      namespace model {
        class com.example.coursemkv.model.Messages {
        }
      }

      namespace model {
        class com.example.coursemkv.model.User {
        }
      }

      namespace model {
        abstract class com.example.coursemkv.model.myHuman {
        }
      }

  

  com.example.coursemkv.HelloApplication -up-|> javafx.application.Application
  com.example.coursemkv.controls.AdminControl .up.|> javafx.fxml.Initializable
  com.example.coursemkv.controls.AdminControl o-- com.example.coursemkv.model.Admin : admin
  com.example.coursemkv.controls.AdminControl o-- com.example.coursemkv.model.JDBCPostgreSQL : db
  com.example.coursemkv.controls.AdminControl o-- com.example.coursemkv.model.Messages : messages
  com.example.coursemkv.controls.HelloController o-- com.example.coursemkv.model.Admin : admin
  com.example.coursemkv.controls.HelloController o-- com.example.coursemkv.model.JDBCPostgreSQL : db
  com.example.coursemkv.controls.SignUpController o-- com.example.coursemkv.model.JDBCPostgreSQL : db
  com.example.coursemkv.controls.UserControl o-- com.example.coursemkv.model.Messages : messages
  com.example.coursemkv.controls.UserControl o-- com.example.coursemkv.model.JDBCPostgreSQL : db
  com.example.coursemkv.controls.UserControl o-- com.example.coursemkv.model.User : user
  com.example.coursemkv.model.Admin -up-|> com.example.coursemkv.model.myHuman
  com.example.coursemkv.model.JDBCPostgreSQL .up.|> com.example.coursemkv.model.DAO
  com.example.coursemkv.model.JDBCPostgreSQL o-- com.example.coursemkv.model.Admin : admin
  com.example.coursemkv.model.JDBCPostgreSQL o-- com.example.coursemkv.model.JDBCPostgreSQL : db
  com.example.coursemkv.model.JDBCPostgreSQL o-- com.example.coursemkv.model.Messages : messages
  com.example.coursemkv.model.JDBCPostgreSQL o-- com.example.coursemkv.model.User : user
  com.example.coursemkv.model.User -up-|> com.example.coursemkv.model.myHuman


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
